<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity_add">
        <TextView
            android:id="@+id/tv_main_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/enter_name_and_position"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="3dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <EditText
            android:id="@+id/et_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/enter_name"
            android:text=""
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/tv_main_label"
            app:layout_constraintStart_toStartOf="@id/tv_main_label"
            app:layout_constraintTop_toBottomOf="@id/tv_main_label"
            />
        <EditText
            android:id="@+id/et_position"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/enter_position"
            android:text=""
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/tv_main_label"
            app:layout_constraintStart_toStartOf="@id/tv_main_label"
            app:layout_constraintTop_toBottomOf="@id/et_name"
            />

        <TextView
            android:id="@+id/tv_education_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/enter_education"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_position"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <EditText
            android:id="@+id/et_university"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/enter_university_name"
            android:text=""
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/tv_education_label"
            app:layout_constraintStart_toStartOf="@id/tv_education_label"
            app:layout_constraintTop_toBottomOf="@id/tv_education_label"
            />
        <EditText
            android:id="@+id/et_degree"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/enter_degree"
            android:text=""
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/tv_education_label"
            app:layout_constraintStart_toStartOf="@id/tv_education_label"
            app:layout_constraintTop_toBottomOf="@id/et_university"
            />
        <EditText
            android:id="@+id/et_education_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/enter_year"
            android:text=""
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/tv_education_label"
            app:layout_constraintStart_toStartOf="@id/tv_education_label"
            app:layout_constraintTop_toBottomOf="@id/et_degree"
            />
        <TextView
            android:id="@+id/tv_course1_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/enter_course"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_education_year"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <EditText
            android:id="@+id/et_organization_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/enter_organization_name"
            android:text=""
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/tv_course1_label"
            app:layout_constraintStart_toStartOf="@id/tv_course1_label"
            app:layout_constraintTop_toBottomOf="@id/tv_course1_label"
            />
        <EditText
            android:id="@+id/et_course_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/enter_course_name"
            android:text=""
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/tv_course1_label"
            app:layout_constraintStart_toStartOf="@id/tv_course1_label"
            app:layout_constraintTop_toBottomOf="@id/et_organization_name"
            />
        <EditText
            android:id="@+id/et_course_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/enter_year"
            android:text=""
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/tv_course1_label"
            app:layout_constraintStart_toStartOf="@id/tv_course1_label"
            app:layout_constraintTop_toBottomOf="@id/et_course_name"
            />
        <EditText
            android:id="@+id/et_github"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/enter_github_username"
            android:text=""
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/tv_course1_label"
            app:layout_constraintStart_toStartOf="@id/tv_course1_label"
            app:layout_constraintTop_toBottomOf="@id/et_course_year"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/submit"
            android:backgroundTint="#8A73B2"
            android:textColor="#E1EF54"
            android:textStyle="bold"
            android:onClick="submitData"
            app:layout_constraintStart_toStartOf="@+id/et_github"
            app:layout_constraintEnd_toEndOf="@+id/et_github"
            app:layout_constraintTop_toBottomOf="@+id/et_github"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>